    FIXED: root mode action doesn't work if a panel url contains spaces
    FIXED: relative url completion in address-bar only works in home dir
    FIXED: [ 242566 ] Cannot F3-View .vcf vCard files
    FIXED: Root action (which opens the root dir of the local filesystem)
           is disabled in the root dir of nonlocal filesystems
    FIXED: when cutting to clipboard from virt:/ the virtual entries are immediately removed
    FIXED: Unselecting files before copy/move operation doesn't work for copy&paste
    FIXED: [ 277259 ] Unselecting files before copy/move operation doesn't work in the same panel
           this also fixes the selection of the other panel being cleared instead
    FIXED: [ 276310 ] crash when trying to delete already deleted file
    FIXED: [ 277578 ] Crash on cancelling calculation of occupied space on smb share
    FIXED: krusader hangs for some time when opening a bz2(and possibly gzip)-compressed archive
    FIXED: loading defaults on the Panel page in Konfigurator has no effect
    FIXED: changes to "Show new/close tab buttons" don't take effect immediately
    FIXED: when options requiring a gui restart are changed, the panel history is lost
    FIXED: [ 277838 ] Swap Panels no longer works


2.4.0-beta1 "Migration"
=======================

    ADDED: option: Panel > Status/Totalsbar > Show space information
    ADDED: Konfigurator: reset button
    ADDED: option: Startup > User Interface > Show actions toolbar
    ADDED: options: Panel > Layout: "Compact", "Classic"
    ADDED: mountman gui option: Show only removable devices
    ADDED: tabs have close buttons
    ADDED: reset button for filter dialog
    ADDED: option: Panel > Operation > Filter dialog remembers settings
    ADDED: tabs can be dragged to the other side
    ADDED: action: Move Current Tab to Other Side - shortcut: CTRL + SHIFT + O
    ADDED: view: iconsizes 64, 128, 256
    ADDED: history is saved/restored
    ADDED: action: Restore Selection