@@ -1,3 +1,5 @@
+    FIXED: [ 294618 ] using "open with" on video files
+           causes their thumbnails to be created, even when not needed
     FIXED: root mode action doesn't work if a panel url contains spaces
     FIXED: relative url completion in address-bar only works in home dir
     FIXED: [ 242566 ] Cannot F3-View .vcf vCard files
